// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectResult handles empty data 1`] = `null`;

exports[`ObjectResult handles unknown 1`] = `
<div
  class="css-uuz0m0-ResultIcon-ResultIcon e1ptbpi30"
  result="unknown"
/>
`;

exports[`ObjectResult renders finished aborted 1`] = `
<div
  class="css-uuz0m0-ResultIcon-ResultIcon e1ptbpi30"
  result="aborted"
>
  <svg
    fill="currentColor"
    height="16"
    size="16"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
    />
  </svg>
</div>
`;

exports[`ObjectResult renders finished errored 1`] = `
<div
  class="css-14326qw-ResultIcon-ResultIcon e1ptbpi30"
  result="errored"
>
  <svg
    fill="currentColor"
    height="16"
    size="16"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
    />
  </svg>
</div>
`;

exports[`ObjectResult renders finished failed 1`] = `
<div
  class="css-1g5vd7-ResultIcon-ResultIcon e1ptbpi30"
  result="failed"
>
  <svg
    fill="currentColor"
    height="16"
    size="16"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11H7v-2h10v2z"
    />
  </svg>
</div>
`;

exports[`ObjectResult renders finished passed 1`] = `
<div
  class="css-svg137-ResultIcon-ResultIcon e1ptbpi30"
  result="passed"
>
  <svg
    fill="currentColor"
    height="16"
    size="16"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
    />
  </svg>
</div>
`;

exports[`ObjectResult renders finished unknown 1`] = `
<div
  class="css-uuz0m0-ResultIcon-ResultIcon e1ptbpi30"
  result="unknown"
>
  <svg
    fill="currentColor"
    height="16"
    size="16"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
    />
  </svg>
</div>
`;

exports[`ObjectResult renders in-progress 1`] = `
<div
  class="css-uuz0m0-ResultIcon-ResultIcon e1ptbpi30"
  result="unknown"
>
  <svg
    fill="currentColor"
    height="16"
    size="16"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M11 17c0 .55.45 1 1 1s1-.45 1-1-.45-1-1-1-1 .45-1 1zm0-14v4h2V5.08c3.39.49 6 3.39 6 6.92 0 3.87-3.13 7-7 7s-7-3.13-7-7c0-1.68.59-3.22 1.58-4.42L12 13l1.41-1.41-6.8-6.8v.02C4.42 6.45 3 9.05 3 12c0 4.97 4.02 9 9 9 4.97 0 9-4.03 9-9s-4.03-9-9-9h-1zm7 9c0-.55-.45-1-1-1s-1 .45-1 1 .45 1 1 1 1-.45 1-1zM6 12c0 .55.45 1 1 1s1-.45 1-1-.45-1-1-1-1 .45-1 1z"
    />
  </svg>
</div>
`;

exports[`ObjectResult renders queued 1`] = `
<div
  class="css-uuz0m0-ResultIcon-ResultIcon e1ptbpi30"
  result="unknown"
>
  <svg
    fill="currentColor"
    height="16"
    size="16"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M13 3c-4.97 0-9 4.03-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42C8.27 19.99 10.51 21 13 21c4.97 0 9-4.03 9-9s-4.03-9-9-9zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
    />
  </svg>
</div>
`;

exports[`ObjectResult renders size 1`] = `
<div
  class="css-svg137-ResultIcon-ResultIcon e1ptbpi30"
  result="passed"
>
  <svg
    fill="currentColor"
    height="12"
    size="12"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
    />
  </svg>
</div>
`;
